fix(representation): harden provider generation contracts